--- a/src/PublicApi/appsettings.json
+++ b/src/PublicApi/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    "AppConnection": "Server=127.0.0.1;Port=5432;Database=AppDb;User Id=postgres;Password=eu18052014;",
-    "IdentityConnection": "Server=127.0.0.1;Port=5432;Database=AppIdentityDb;User Id=postgres;Password=eu18052014;"
+    "AppConnection": "Server=postgres;Port=5432;Database=AppDb;User Id=postgres;Password=qazwsx321;",
+    "IdentityConnection": "Server=postgres_2;Port=5432;Database=AppIdentityDb;User Id=postgres;Password=qazwsx321;"
   },
   "Logging": {
     "LogLevel": {
